# detecting-collusion

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: dgp0.yaml
notebooks/: Real_cartel.ipynb  beta_only.ipynb  calm_fundamentals.ipynb  figures.ipynb  geometry.ipynb  kappa_only.ipynb  logit.ipynb  real_data.ipynb  screening.ipynb  simulation.ipynb  trend_fundamentals.ipynb
src/data/: clean_data.py  data_orchestrator.py  feature_eng.py  load_data.py  run_feature.py
src/detecting_collusion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/model/: autoencoder.py  train_ae.py
src/plots/: run_plots_baseline.py
src/scoring/: conduct_axis.py  false_pos.py  fp_calmf.py  run_scoring.py
src/screening/: run_screen.py  screening.py
src/simulation/: dgp0.py  run_dgp0.py  run_evaluation.py  validation.py
src/simulation/windows/: labels.py  run_window.py  windows.py
src/utils/: config.py  paths.py  seeding.py
