[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detecting-collusion"
version = "0.1.0"
description = "Machine learning pipelines for detecting collusion in price series."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "tensorflow>=2.15",
    "scikit-learn>=1.3",
]
viz = [
    "plotly>=5.20",
]

[tool.setuptools.packages.find]
where = ["src"]